major code fixes